--- a/Dev/Dev2.Studio.Interfaces/Dev2.Studio.Interfaces.csproj
+++ b/Dev/Dev2.Studio.Interfaces/Dev2.Studio.Interfaces.csproj
@@ -4,7 +4,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{37149E8E-FEF2-47C0-8391-80DCCE86D26D}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <TargetFrameworks>net6.0-windows;net48</TargetFrameworks>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <EnableDefaultItems>false</EnableDefaultItems>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
