--- a/Dev/Warewolf.COMIPC.Client/Warewolf.COMIPC.Client.csproj
+++ b/Dev/Warewolf.COMIPC.Client/Warewolf.COMIPC.Client.csproj
@@ -4,7 +4,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{BCA6F2B3-C102-45B5-8F64-F0CCE2533F1F}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <TargetFrameworks>net6.0-windows;net48</TargetFrameworks>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <EnableDefaultItems>false</EnableDefaultItems>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
