--- a/Dev/Warewolf.Studio.CustomControls/Warewolf.Studio.CustomControls.csproj
+++ b/Dev/Warewolf.Studio.CustomControls/Warewolf.Studio.CustomControls.csproj
@@ -4,7 +4,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{1BD5CC42-66C7-4A1B-AF1F-E6F2D4372B44}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <TargetFrameworks>net6.0-windows;net48</TargetFrameworks>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <EnableDefaultItems>false</EnableDefaultItems>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
