--- a/Dev/Warewolf.TestingDotnetDllCascading/Warewolf.TestingDotnetDllCascading.csproj
+++ b/Dev/Warewolf.TestingDotnetDllCascading/Warewolf.TestingDotnetDllCascading.csproj
@@ -4,7 +4,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{7925B0C6-88DC-49A4-BBE1-C0550987F63A}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <TargetFrameworks>net6.0-windows;net48</TargetFrameworks>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <EnableDefaultItems>false</EnableDefaultItems>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
