--- a/Dev/ConsoleAppToTestExecuteCommandLineActivity/ConsoleAppToTestExecuteCommandLineActivity.csproj
+++ b/Dev/ConsoleAppToTestExecuteCommandLineActivity/ConsoleAppToTestExecuteCommandLineActivity.csproj
@@ -4,7 +4,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{DF3CA7CD-16B7-465E-A7DB-91951DFC330F}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net6.0-windows;net48</TargetFrameworks>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <EnableDefaultItems>false</EnableDefaultItems>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
