--- a/Dev/Dev2.Common.Interfaces/Dev2.Common.Interfaces.csproj
+++ b/Dev/Dev2.Common.Interfaces/Dev2.Common.Interfaces.csproj
@@ -4,7 +4,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{13C0C6E9-7DC3-4DC3-8535-031C263CEE0B}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <TargetFrameworks>net6.0-windows;net48</TargetFrameworks>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <EnableDefaultItems>false</EnableDefaultItems>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
