--- a/Dev/Dev2.Net6.Compatibility/Dev2.Net6.Compatibility.csproj
+++ b/Dev/Dev2.Net6.Compatibility/Dev2.Net6.Compatibility.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0-windows;net48</TargetFrameworks>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsTestProject>false</IsTestProject>
