--- a/Dev/Dev2.SignalR.Wrappers.New/Dev2.SignalR.Wrappers.New.csproj
+++ b/Dev/Dev2.SignalR.Wrappers.New/Dev2.SignalR.Wrappers.New.csproj
@@ -4,7 +4,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{335E9126-30E1-4D23-B642-5D6BF82E2C09}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <TargetFrameworks>net6.0-windows;net48</TargetFrameworks>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <EnableDefaultItems>false</EnableDefaultItems>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
