--- a/Dev/Dev2.TaskScheduler.Wrappers/Dev2.TaskScheduler.Wrappers.csproj
+++ b/Dev/Dev2.TaskScheduler.Wrappers/Dev2.TaskScheduler.Wrappers.csproj
@@ -4,7 +4,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{1B229665-1631-4275-AFBD-CB5B7775E4CA}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <TargetFrameworks>net6.0-windows;net48</TargetFrameworks>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <EnableDefaultItems>false</EnableDefaultItems>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
