--- a/Dev/Warewolf.COMIPC/Warewolf.COMIPC.csproj
+++ b/Dev/Warewolf.COMIPC/Warewolf.COMIPC.csproj
@@ -4,7 +4,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{D58AB24F-C45B-4DF1-9CDE-54AFF7995513}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net6.0-windows;net48</TargetFrameworks>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <EnableDefaultItems>false</EnableDefaultItems>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
