--- a/Dev/Warewolf.Common.Framework48/Warewolf.Common.Framework48.csproj
+++ b/Dev/Warewolf.Common.Framework48/Warewolf.Common.Framework48.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net6.0-windows;net48</TargetFrameworks>
+    <TargetFramework>net6.0-windows</TargetFramework>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
