--- a/Dev/Warewolf.Exchange.Email.Wrapper/Warewolf.Exchange.Email.Wrapper.csproj
+++ b/Dev/Warewolf.Exchange.Email.Wrapper/Warewolf.Exchange.Email.Wrapper.csproj
@@ -4,7 +4,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{B02E76F0-9B4B-41F6-8D3A-00E4564142B3}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <TargetFrameworks>net6.0-windows;net48</TargetFrameworks>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <EnableDefaultItems>false</EnableDefaultItems>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
