--- a/Dev/Warewolf.Licensing/Warewolf.Licensing.csproj
+++ b/Dev/Warewolf.Licensing/Warewolf.Licensing.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFrameworks>net6.0-windows;net48</TargetFrameworks>
+        <TargetFramework>net6.0-windows</TargetFramework>
         <RuntimeIdentifiers>win-x86;win-x64</RuntimeIdentifiers>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     </PropertyGroup>
