--- a/Dev/Warewolf.ResourceManagement.Tests/Warewolf.ResourceManagement.Tests.csproj
+++ b/Dev/Warewolf.ResourceManagement.Tests/Warewolf.ResourceManagement.Tests.csproj
@@ -4,7 +4,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{54724E72-4953-4CED-B4EA-532F9596A88D}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <TargetFrameworks>net6.0-windows;net48</TargetFrameworks>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <EnableDefaultItems>false</EnableDefaultItems>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
