--- a/Dev/Warewolf.Storage.Interfaces/Warewolf.Storage.Interfaces.csproj
+++ b/Dev/Warewolf.Storage.Interfaces/Warewolf.Storage.Interfaces.csproj
@@ -5,7 +5,7 @@
     <ProjectGuid>{61A15557-1D18-4C69-88EB-31BF49B7FB50}</ProjectGuid>
     <OutputType>Library</OutputType>
     <!--<TargetFramework>netstandard2.1</TargetFramework>-->
-    <TargetFrameworks>net6.0-windows;net48</TargetFrameworks>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <EnableDefaultItems>false</EnableDefaultItems>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
