--- a/Dev/Warewolf.Studio.AntiCorruptionLayer/Warewolf.Studio.AntiCorruptionLayer.csproj
+++ b/Dev/Warewolf.Studio.AntiCorruptionLayer/Warewolf.Studio.AntiCorruptionLayer.csproj
@@ -4,7 +4,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{CC1B89CD-3222-4019-A0D1-58664F92CC47}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <TargetFrameworks>net6.0-windows;net48</TargetFrameworks>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <EnableDefaultItems>false</EnableDefaultItems>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
