--- a/Dev/Warewolf.Studio.ViewModels/Warewolf.Studio.ViewModels.csproj
+++ b/Dev/Warewolf.Studio.ViewModels/Warewolf.Studio.ViewModels.csproj
@@ -4,7 +4,7 @@
 		<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
 		<ProjectGuid>{C52B12C2-6A1D-4C4F-A878-CF283662A226}</ProjectGuid>
 		<OutputType>Library</OutputType>
-		<TargetFrameworks>net6.0-windows;net48</TargetFrameworks>
+		<TargetFramework>net6.0-windows</TargetFramework>
 		<AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
 		<EnableDefaultItems>false</EnableDefaultItems>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
