--- a/Dev/Warewolf.Studio.Views/Warewolf.Studio.Views.csproj
+++ b/Dev/Warewolf.Studio.Views/Warewolf.Studio.Views.csproj
@@ -4,7 +4,7 @@
 		<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
 		<ProjectGuid>{F0D6A8C9-FF25-40C9-99DB-CCBC21ABDC36}</ProjectGuid>
 		<OutputType>Library</OutputType>
-		<TargetFrameworks>net6.0-windows;net48</TargetFrameworks>
+		<TargetFramework>net6.0-windows</TargetFramework>
 		<AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
 		<EnableDefaultItems>false</EnableDefaultItems>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
