--- a/Dev/Warewolf.Trigger.Queue/Warewolf.Trigger.Queue.csproj
+++ b/Dev/Warewolf.Trigger.Queue/Warewolf.Trigger.Queue.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net6.0-windows;net48</TargetFrameworks>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <RootNamespace>Warewolf.Trigger</RootNamespace>
   </PropertyGroup>
   <PropertyGroup>
