Rollback this project too to fi compile issues

--- a/Dev/Warewolf.Studio.Views/Warewolf.Studio.Views.csproj
+++ b/Dev/Warewolf.Studio.Views/Warewolf.Studio.Views.csproj
@@ -11,6 +11,7 @@
 		<AppDesignerFolder>Properties</AppDesignerFolder>
 		<RootNamespace>Warewolf.Studio.Views</RootNamespace>
 		<AssemblyName>Warewolf.Studio.Views</AssemblyName>
+
 		<RuntimeIdentifier>win</RuntimeIdentifier>
 		<FileAlignment>512</FileAlignment>
 		<SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -43,6 +44,65 @@
 		<LangVersion>7.3</LangVersion>
 	</PropertyGroup>
 	<ItemGroup>
+		 
+		<!--<PackageReference Include="Infragistics.WPF.Controls.Editors.XamComboEditor.Trial" Version="22.2.19" />
+		<PackageReference Include="Infragistics.WPF.Controls.Editors.XamComboEditor.Trial" Version="22.2.19" />
+		<PackageReference Include="Infragistics.WPF.Controls.Editors.XamComboEditor.Trial" Version="22.2.19" />
+		<PackageReference Include="Infragistics.WPF.RichTextEditor.Trial" Version="22.2.19" />
+		<PackageReference Include="Infragistics.WPF.Controls.Grids.XamGrid.Trial" Version="22.2.19" />
+		<PackageReference Include="Infragistics.WPF.DialogWindow.Trial" Version="22.2.19" />
+		<PackageReference Include="Infragistics.WPF.DialogWindow.Trial" Version="22.2.19" />
+		<PackageReference Include="Infragistics.WPF.DataTree.Trial" Version="22.2.19" />
+		<PackageReference Include="Infragistics.WPF.Menus.Trial" Version="22.2.19" />
+		<PackageReference Include="Infragistics.WPF.DataManager.Trial" Version="22.2.19" />-->
+		<!--<PackageReference Include="Infragistics.WPF.DataGrids.Trial" Version="22.2.19" />-->
+		<!--<PackageReference Include="Infragistics.WPF.DockManager.Trial" Version="22.2.19" />
+		<PackageReference Include="Infragistics.WPF.RichTextDocument.Html.Trial" Version="22.2.19" />
+		<PackageReference Include="Infragistics.WPF.RichTextDocument.Trial" Version="22.2.19" />
+		<PackageReference Include="Infragistics.WPF.DragDrop.Trial" Version="22.2.19" />
+		<PackageReference Include="Infragistics.WPF.Editors.Trial" Version="22.2.19" />	 
+		<PackageReference Include="Infragistics.WPF.Trial" Version="22.2.19" />-->	 
+		<Reference Include="InfragisticsWPF4.Controls.Editors.XamComboEditor.v15.1">
+		  <HintPath>..\Binaries\Infragistcs_Net6\InfragisticsWPF4.Controls.Editors.XamComboEditor.v15.1.dll</HintPath>
+		</Reference>	 
+		<Reference Include="InfragisticsWPF4.Controls.Editors.XamRichTextEditor.v15.1">
+		  <HintPath>..\Binaries\Infragistcs_Net6\InfragisticsWPF4.Controls.Editors.XamRichTextEditor.v15.1.dll</HintPath>
+		</Reference>	 
+		<Reference Include="InfragisticsWPF4.Controls.Grids.XamGrid.v15.1">
+		  <HintPath>..\Binaries\Infragistcs_Net6\InfragisticsWPF4.Controls.Grids.XamGrid.v15.1.dll</HintPath>
+		</Reference>	 
+		<Reference Include="InfragisticsWPF4.Controls.Interactions.XamDialogWindow.v15.1">
+		  <HintPath>..\Binaries\Infragistcs_Net6\InfragisticsWPF4.Controls.Interactions.XamDialogWindow.v15.1.dll</HintPath>
+		</Reference>	 
+		<Reference Include="InfragisticsWPF4.Controls.Menus.XamDataTree.v15.1">
+		  <HintPath>..\Binaries\Infragistcs_Net6\InfragisticsWPF4.Controls.Menus.XamDataTree.v15.1.dll</HintPath>
+		</Reference>	 
+		<Reference Include="InfragisticsWPF4.Controls.Menus.XamMenu.v15.1">
+		  <HintPath>..\Binaries\Infragistcs_Net6\InfragisticsWPF4.Controls.Menus.XamMenu.v15.1.dll</HintPath>
+		</Reference>	 
+		<Reference Include="InfragisticsWPF4.DataManager.v15.1">
+		  <HintPath>..\Binaries\Infragistcs_Net6\InfragisticsWPF4.DataManager.v15.1.dll</HintPath>
+		</Reference>	 
+		<Reference Include="InfragisticsWPF4.DockManager.v15.1">
+		  <HintPath>..\Binaries\Infragistcs_Net6\InfragisticsWPF4.DockManager.v15.1.dll</HintPath>
+		</Reference>	 
+		<Reference Include="InfragisticsWPF4.Documents.RichTextDocument.Html.v15.1">
+		  <HintPath>..\Binaries\Infragistcs_Net6\InfragisticsWPF4.Documents.RichTextDocument.Html.v15.1.dll</HintPath>
+		</Reference>	 
+		<Reference Include="InfragisticsWPF4.Documents.RichTextDocument.v15.1">
+		  <HintPath>..\Binaries\Infragistcs_Net6\InfragisticsWPF4.Documents.RichTextDocument.v15.1.dll</HintPath>
+		</Reference>	 
+		<Reference Include="InfragisticsWPF4.DragDrop.v15.1">
+		  <HintPath>..\Binaries\Infragistcs_Net6\InfragisticsWPF4.DragDrop.v15.1.dll</HintPath>
+		</Reference>	 
+		<Reference Include="InfragisticsWPF4.Editors.v15.1">
+		  <HintPath>..\Binaries\Infragistcs_Net6\InfragisticsWPF4.Editors.v15.1.dll</HintPath>
+		</Reference>	 
+		<Reference Include="InfragisticsWPF4.v15.1">
+		  <HintPath>..\Binaries\Infragistcs_Net6\InfragisticsWPF4.v15.1.dll</HintPath>
+		</Reference>
+		 
+	 
 		<Reference Include="System.Activities" />
 		<Reference Include="System.Activities.Presentation" />
 		<Reference Include="System.ServiceModel.Activities" />
@@ -354,156 +414,25 @@
 		<PackageReference Include="Newtonsoft.Json">
 			<Version>13.0.2</Version>
 		</PackageReference>
+		<!--<PackageReference Include="Prism.Mvvm">
+      <Version>1.1.1</Version>
+    </PackageReference>-->
+		<PackageReference Include="Prism.Core" Version="8.1.97" />
+
+		<!--<PackageReference Include="Unofficial.Microsoft.mshtml">
+      <Version>7.0.3300</Version>
+    </PackageReference>-->
+		<PackageReference Include="Unofficial.Microsoft.mshtml.NetStandard" Version="7.0.3300.2" />
+		<PackageReference Include="System.ServiceModel.Duplex" Version="4.9.0" />
+		<PackageReference Include="System.ServiceModel.NetTcp" Version="4.9.0" />
+		<PackageReference Include="System.ServiceModel.Federation" Version="4.9.0" />
 		<PackageReference Include="Caliburn.Micro" Version="4.0.212" />
-		<PackageReference Include="Caliburn.Micro.Core" Version="4.0.212" />
-		<PackageReference Include="Unofficial.Microsoft.mshtml">
-			<Version>7.0.3300</Version>
-		</PackageReference>
+		<!--<PackageReference Include="FontAwesome.WPF" Version="4.7.0.9" />-->
+		<!--<PackageReference Include="Unity" Version="4.0.1" />-->
+		<PackageReference Include="Unity" Version="5.11.10" />
+		<!--<PackageReference Include="WPFTextBoxAutoComplete" Version="1.0.5" />-->
 	</ItemGroup>
-    <ItemGroup Condition="'$(TargetFrameworkIdentifier)' == '.NETFramework'">
-        <PackageReference Include="Prism.Mvvm" Version="1.1.1" />
-		<PackageReference Include="Unity">
-			<Version>5.11.10</Version>
-		</PackageReference>
-		<PackageReference Include="WPFTextBoxAutoComplete">
-			<Version>1.0.0</Version>
-		</PackageReference>
-		<PackageReference Include="FontAwesome.WPF">
-			<Version>4.7.0.9</Version>
-		</PackageReference>
-		<PackageReference Include="Expression.Blend.Sdk">
-			<Version>1.0.2</Version>
-		</PackageReference>
-		<Reference Include="PresentationCore" />
-		<Reference Include="PresentationFramework" />
-		<Reference Include="System" />
-		<Reference Include="InfragisticsWPF4.Controls.Editors.XamComboEditor.v15.1, Version=15.1.20151.2055, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
-			<SpecificVersion>False</SpecificVersion>
-			<HintPath>..\Binaries\InfragisticsWPF4.Controls.Editors.XamComboEditor.v15.1.dll</HintPath>
-		</Reference>
-		<Reference Include="InfragisticsWPF4.Controls.Editors.XamComboEditor.v15.1.Design, Version=15.1.20151.2055, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
-			<SpecificVersion>False</SpecificVersion>
-			<HintPath>..\Binaries\InfragisticsWPF4.Controls.Editors.XamComboEditor.v15.1.Design.dll</HintPath>
-		</Reference>
-		<Reference Include="InfragisticsWPF4.Controls.Editors.XamRichTextEditor.v15.1, Version=15.1.20151.2055, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
-			<SpecificVersion>False</SpecificVersion>
-			<HintPath>..\Binaries\InfragisticsWPF4.Controls.Editors.XamRichTextEditor.v15.1.dll</HintPath>
-		</Reference>
-		<Reference Include="InfragisticsWPF4.Controls.Grids.XamGrid.v15.1, Version=15.1.20151.2055, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
-			<SpecificVersion>False</SpecificVersion>
-			<HintPath>..\Binaries\InfragisticsWPF4.Controls.Grids.XamGrid.v15.1.dll</HintPath>
-		</Reference>
-		<Reference Include="InfragisticsWPF4.Controls.Interactions.XamDialogWindow.v15.1, Version=15.1.20151.2055, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
-			<SpecificVersion>False</SpecificVersion>
-			<HintPath>..\Binaries\InfragisticsWPF4.Controls.Interactions.XamDialogWindow.v15.1.dll</HintPath>
-		</Reference>
-		<Reference Include="InfragisticsWPF4.Controls.Menus.XamDataTree.v15.1, Version=15.1.20151.2055, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
-			<SpecificVersion>False</SpecificVersion>
-			<HintPath>..\Binaries\InfragisticsWPF4.Controls.Menus.XamDataTree.v15.1.dll</HintPath>
-		</Reference>
-		<Reference Include="InfragisticsWPF4.Controls.Menus.XamMenu.v15.1, Version=15.1.20151.2055, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
-			<SpecificVersion>False</SpecificVersion>
-			<HintPath>..\Binaries\InfragisticsWPF4.Controls.Menus.XamMenu.v15.1.dll</HintPath>
-		</Reference>
-		<Reference Include="InfragisticsWPF4.DataManager.v15.1, Version=15.1.20151.2055, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
-			<SpecificVersion>False</SpecificVersion>
-			<HintPath>..\Binaries\InfragisticsWPF4.DataManager.v15.1.dll</HintPath>
-		</Reference>
-		<Reference Include="InfragisticsWPF4.DataPresenter.v15.1, Version=15.1.20151.2055, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
-			<SpecificVersion>False</SpecificVersion>
-			<HintPath>..\Binaries\InfragisticsWPF4.DataPresenter.v15.1.dll</HintPath>
-		</Reference>
-		<Reference Include="InfragisticsWPF4.DockManager.v15.1">
-			<HintPath>..\Binaries\InfragisticsWPF4.DockManager.v15.1.dll</HintPath>
-		</Reference>
-		<Reference Include="InfragisticsWPF4.Documents.RichTextDocument.Html.v15.1, Version=15.1.20151.2055, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
-			<SpecificVersion>False</SpecificVersion>
-			<HintPath>..\Binaries\InfragisticsWPF4.Documents.RichTextDocument.Html.v15.1.dll</HintPath>
-		</Reference>
-		<Reference Include="InfragisticsWPF4.Documents.RichTextDocument.v15.1, Version=15.1.20151.2055, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
-			<SpecificVersion>False</SpecificVersion>
-			<HintPath>..\Binaries\InfragisticsWPF4.Documents.RichTextDocument.v15.1.dll</HintPath>
-		</Reference>
-		<Reference Include="InfragisticsWPF4.DragDrop.v15.1, Version=15.1.20151.2055, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
-			<SpecificVersion>False</SpecificVersion>
-			<HintPath>..\Binaries\InfragisticsWPF4.DragDrop.v15.1.dll</HintPath>
-		</Reference>
-		<Reference Include="InfragisticsWPF4.Editors.v15.1, Version=15.1.20151.2055, Culture=neutral, processorArchitecture=MSIL">
-			<SpecificVersion>False</SpecificVersion>
-			<HintPath>..\Binaries\InfragisticsWPF4.Editors.v15.1.dll</HintPath>
-		</Reference>
-		<Reference Include="InfragisticsWPF4.v15.1, Version=15.1.20151.2055, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
-			<SpecificVersion>False</SpecificVersion>
-			<HintPath>..\Binaries\InfragisticsWPF4.v15.1.dll</HintPath>
-		</Reference>
-		<Reference Include="Microsoft.Windows.Design.Extensibility, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-			<SpecificVersion>False</SpecificVersion>
-			<HintPath>..\Binaries\Microsoft.Windows.Design.Extensibility.dll</HintPath>
-		</Reference>
-		<Reference Include="MvvmFoundation.Wpf">
-			<HintPath>..\Binaries\MvvmFoundation.Wpf.dll</HintPath>
-		</Reference>
-    </ItemGroup>
-    <ItemGroup Condition="'$(TargetFrameworkIdentifier)' != '.NETFramework'">
-        <PackageReference Include="Prism.Core" Version="8.1.97" />
-		<!--<PackageReference Include="Infragistics.WPF.Controls.Editors.XamComboEditor.Trial" Version="22.2.19" />
-		<PackageReference Include="Infragistics.WPF.Controls.Editors.XamComboEditor.Trial" Version="22.2.19" />
-		<PackageReference Include="Infragistics.WPF.Controls.Editors.XamComboEditor.Trial" Version="22.2.19" />
-		<PackageReference Include="Infragistics.WPF.RichTextEditor.Trial" Version="22.2.19" />
-		<PackageReference Include="Infragistics.WPF.Controls.Grids.XamGrid.Trial" Version="22.2.19" />
-		<PackageReference Include="Infragistics.WPF.DialogWindow.Trial" Version="22.2.19" />
-		<PackageReference Include="Infragistics.WPF.DialogWindow.Trial" Version="22.2.19" />
-		<PackageReference Include="Infragistics.WPF.DataTree.Trial" Version="22.2.19" />
-		<PackageReference Include="Infragistics.WPF.Menus.Trial" Version="22.2.19" />
-		<PackageReference Include="Infragistics.WPF.DataManager.Trial" Version="22.2.19" />-->
-		<!--<PackageReference Include="Infragistics.WPF.DataGrids.Trial" Version="22.2.19" />-->
-		<!--<PackageReference Include="Infragistics.WPF.DockManager.Trial" Version="22.2.19" />
-		<PackageReference Include="Infragistics.WPF.RichTextDocument.Html.Trial" Version="22.2.19" />
-		<PackageReference Include="Infragistics.WPF.RichTextDocument.Trial" Version="22.2.19" />
-		<PackageReference Include="Infragistics.WPF.DragDrop.Trial" Version="22.2.19" />
-		<PackageReference Include="Infragistics.WPF.Editors.Trial" Version="22.2.19" />	 
-		<PackageReference Include="Infragistics.WPF.Trial" Version="22.2.19" />-->
-		<Reference Include="InfragisticsWPF4.Controls.Editors.XamComboEditor.v15.1">
-			<HintPath>..\Binaries\Infragistcs_Net6\InfragisticsWPF4.Controls.Editors.XamComboEditor.v15.1.dll</HintPath>
-		</Reference>
-		<Reference Include="InfragisticsWPF4.Controls.Editors.XamRichTextEditor.v15.1">
-			<HintPath>..\Binaries\Infragistcs_Net6\InfragisticsWPF4.Controls.Editors.XamRichTextEditor.v15.1.dll</HintPath>
-		</Reference>
-		<Reference Include="InfragisticsWPF4.Controls.Grids.XamGrid.v15.1">
-			<HintPath>..\Binaries\Infragistcs_Net6\InfragisticsWPF4.Controls.Grids.XamGrid.v15.1.dll</HintPath>
-		</Reference>
-		<Reference Include="InfragisticsWPF4.Controls.Interactions.XamDialogWindow.v15.1">
-			<HintPath>..\Binaries\Infragistcs_Net6\InfragisticsWPF4.Controls.Interactions.XamDialogWindow.v15.1.dll</HintPath>
-		</Reference>
-		<Reference Include="InfragisticsWPF4.Controls.Menus.XamDataTree.v15.1">
-			<HintPath>..\Binaries\Infragistcs_Net6\InfragisticsWPF4.Controls.Menus.XamDataTree.v15.1.dll</HintPath>
-		</Reference>
-		<Reference Include="InfragisticsWPF4.Controls.Menus.XamMenu.v15.1">
-			<HintPath>..\Binaries\Infragistcs_Net6\InfragisticsWPF4.Controls.Menus.XamMenu.v15.1.dll</HintPath>
-		</Reference>
-		<Reference Include="InfragisticsWPF4.DataManager.v15.1">
-			<HintPath>..\Binaries\Infragistcs_Net6\InfragisticsWPF4.DataManager.v15.1.dll</HintPath>
-		</Reference>
-		<Reference Include="InfragisticsWPF4.DockManager.v15.1">
-			<HintPath>..\Binaries\Infragistcs_Net6\InfragisticsWPF4.DockManager.v15.1.dll</HintPath>
-		</Reference>
-		<Reference Include="InfragisticsWPF4.Documents.RichTextDocument.Html.v15.1">
-			<HintPath>..\Binaries\Infragistcs_Net6\InfragisticsWPF4.Documents.RichTextDocument.Html.v15.1.dll</HintPath>
-		</Reference>
-		<Reference Include="InfragisticsWPF4.Documents.RichTextDocument.v15.1">
-			<HintPath>..\Binaries\Infragistcs_Net6\InfragisticsWPF4.Documents.RichTextDocument.v15.1.dll</HintPath>
-		</Reference>
-		<Reference Include="InfragisticsWPF4.DragDrop.v15.1">
-			<HintPath>..\Binaries\Infragistcs_Net6\InfragisticsWPF4.DragDrop.v15.1.dll</HintPath>
-		</Reference>
-		<Reference Include="InfragisticsWPF4.Editors.v15.1">
-			<HintPath>..\Binaries\Infragistcs_Net6\InfragisticsWPF4.Editors.v15.1.dll</HintPath>
-		</Reference>
-		<Reference Include="InfragisticsWPF4.v15.1">
-			<HintPath>..\Binaries\Infragistcs_Net6\InfragisticsWPF4.v15.1.dll</HintPath>
-		</Reference>
-    </ItemGroup>
-    <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+	<!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
