Added Elsa Server Source Code to create custom activity named AssignActivity similar to Assign Tool of WW

--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,4 @@ Dev/SonarQube/SolutionBinding.sqconfig
 /Dev/Binaries/Projects/IronRubyAll_Net6/IronRuby1130/.vs
 !/Dev/Server Tests Setup/**
 !/Dev/Binaries/Infragistcs_Net6/**
+/Dev/Elsa/elsa-server/.vs/ElsaServer
