--- a/Dev/Dev2.Data/Dev2.Data.csproj
+++ b/Dev/Dev2.Data/Dev2.Data.csproj
@@ -342,11 +342,13 @@
 			<Version>1.0.3</Version>
 		</PackageReference>
 	</ItemGroup>
-	<Reference Include="Infragistics.Calculations">
-		<HintPath>..\Binaries\Infragistcs_Net6\Infragistics.Calculations.dll</HintPath>
-	</Reference>
-	<PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.1" />
-	<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	<ItemGroup>
+		<Reference Include="Infragistics.Calculations">
+			<HintPath>..\Binaries\Infragistcs_Net6\Infragistics.Calculations.dll</HintPath>
+		</Reference>
+		<PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.1" />
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
 	<!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
