Start adding compatability to net48 platform config

--- a/Dev/Dev2.Data/Dev2.Data.csproj
+++ b/Dev/Dev2.Data/Dev2.Data.csproj
@@ -354,7 +354,7 @@
     </PackageReference>
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.1" />
   </ItemGroup>
-  <ItemGroup>
+  <ItemGroup Condition="'$(TargetFrameworkIdentifier)' != '.NETFramework'">
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
