--- a/Dev/Dev2.Data/Dev2.Data.csproj
+++ b/Dev/Dev2.Data/Dev2.Data.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -355,7 +355,7 @@
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.1" />
 	  <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
-  <ItemGroup Condition="">
+  <ItemGroup Condition="'$(TargetFrameworkIdentifier)' == '.NETFramework'">
   </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
