--- a/Dev/Warewolf.Driver.Serilog.Tests/Warewolf.Driver.Serilog.Tests.csproj
+++ b/Dev/Warewolf.Driver.Serilog.Tests/Warewolf.Driver.Serilog.Tests.csproj
@@ -11,7 +11,7 @@
     <PackageReference Include="Microsoft.TestPlatform.ObjectModel" Version="16.11.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.2" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.2" />
-    <PackageReference Include="NEST" Version="7.6.0" /> 
+	<PackageReference Include="Elastic.Clients.Elasticsearch" Version="8.14.6" />
     <PackageReference Include="Serilog" Version="2.8.0" />
     <PackageReference Include="Serilog.Sinks.SQLite" Version="4.5.0" />
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.112" />
