7742-update elasticsearch tool to elacticsearch 8

--- a/Dev/Warewolf.Auditing/Warewolf.Auditing.csproj
+++ b/Dev/Warewolf.Auditing/Warewolf.Auditing.csproj
@@ -6,7 +6,7 @@
     <CodeAnalysisRuleSet>..\.sonarlint\warewolf_dotnet_frameworkcsharp.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="NEST" Version="7.6.0" />
+    <PackageReference Include="Elastic.Clients.Elasticsearch" Version="8.14.6" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="System.Net.WebSockets.Client.Managed" Version="1.0.22" />
     <PackageReference Include="Mindbox.Data.Linq" Version="5.0.0" />
