7742-patching unit test failures

--- a/Dev/Warewolf.Auditing.Tests/Warewolf.Auditing.Tests.csproj
+++ b/Dev/Warewolf.Auditing.Tests/Warewolf.Auditing.Tests.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net48</TargetFramework>
     <Configurations>Debug</Configurations>
+	<LangVersion>9.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
