--- a/Dev/Warewolf.Auditing.Tests/Warewolf.Auditing.Tests.csproj
+++ b/Dev/Warewolf.Auditing.Tests/Warewolf.Auditing.Tests.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0-windows</TargetFramework>
     <Configurations>Debug</Configurations>
+	<LangVersion>9.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <ContentSQLiteInteropFiles>true</ContentSQLiteInteropFiles>
