--- a/Dev/Warewolf.Driver.Serilog.Tests/Warewolf.Driver.Serilog.Tests.csproj
+++ b/Dev/Warewolf.Driver.Serilog.Tests/Warewolf.Driver.Serilog.Tests.csproj
@@ -12,10 +12,11 @@
     <CollectSQLiteInteropFiles>false</CollectSQLiteInteropFiles>
  </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Elastic.Serilog.Sinks" Version="8.11.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
     <PackageReference Include="Microsoft.TestPlatform.ObjectModel" Version="17.11.0" />
     <PackageReference Include="MSTest.TestFramework" Version="3.0.2" />
-    <PackageReference Include="Elastic.Clients.Elasticsearch" Version="8.15.3" />
+    <PackageReference Include="Elastic.Clients.Elasticsearch" Version="8.15.6" />
     <PackageReference Include="Serilog" Version="4.0.1" />
     <PackageReference Include="Serilog.Sinks.SQLite" Version="5.5.0" />
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.118" />
