7742-patch compile failure

--- a/Dev/Warewolf.Driver.Serilog/Warewolf.Driver.Serilog.csproj
+++ b/Dev/Warewolf.Driver.Serilog/Warewolf.Driver.Serilog.csproj
@@ -23,8 +23,8 @@
     <AdditionalFiles Include="..\.sonarlint\warewolf_dotnet_framework\CSharp\SonarLint.xml" Link="SonarLint.xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Elastic.Serilog.Sinks" Version="8.11.1" />
     <PackageReference Include="Serilog" Version="4.0.1" />
+    <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="10.0.0" />
     <PackageReference Include="Serilog.Sinks.SQLite" Version="5.5.0" />
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.118" />
     <PackageReference Include="Fleck" Version="1.2.0" />
